--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: truthlens
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+    startCommand: python main.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.0
